--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>springws</module>
         <module>activiti</module>
         <module>dropwizard</module>
+        <module>play</module>
+        <module>jersey</module>
     </modules>
 
 
