--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>dropwizard</module>
         <module>play</module>
         <module>jersey</module>
+        <module>hibernate</module>
     </modules>
 
 
