--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>Commons</module>
         <module>Guava</module>
         <module>shiro</module>
+        <module>retrofit</module>
     </modules>
 
 
